--- a/etaal.ipynb
+++ b/etaal.ipynb
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7ff10d4ec208>]"
+       "[<matplotlib.lines.Line2D at 0x7fb18ca5c160>]"
       ]
      },
      "execution_count": 6,
@@ -305,16 +305,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7ff10e95abe0>]"
+       "[<matplotlib.lines.Line2D at 0x7fb18b855ba8>]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -339,9 +339,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.preprocessing import MinMaxScaler\n",
     "from keras.models import Sequential\n",
@@ -350,10 +358,121 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[7.36089744e-06],\n",
+       "       [2.45363248e-06],\n",
+       "       [1.22681624e-05],\n",
+       "       ...,\n",
+       "       [8.80854060e-04],\n",
+       "       [5.79057265e-04],\n",
+       "       [6.01139958e-04]])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scaler = MinMaxScaler(feature_range=(0, 1))\n",
+    "scaled_data = scaler.fit_transform(education_data.values)\n",
+    "scaled_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of x train (1217, 60)\n",
+      "Shape of y train (1217,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "x_train, y_train = [], []\n",
+    "for i in range(60, len(train)):\n",
+    "    x_train.append(scaled_data[i - 60: i, 0])\n",
+    "    y_train.append(scaled_data[i, 0])\n",
+    "x_train, y_train = np.array(x_train), np.array(y_train)\n",
+    "\n",
+    "print(\"Shape of x train\", x_train.shape)\n",
+    "print(\"Shape of y train\", y_train.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1217, 60, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "x_train = np.reshape(x_train, (x_train.shape[0], x_train.shape[1], 1))\n",
+    "print(x_train.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/1\n",
+      " - 94s - loss: 0.0047\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x7fb188e87358>"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create the LSTM Network\n",
+    "model = Sequential()\n",
+    "model.add(LSTM(units=50, return_sequences=True, input_shape=(x_train.shape[1], 1)))\n",
+    "model.add(LSTM(units=50))\n",
+    "model.add(Dense(1))\n",
+    "\n",
+    "model.compile(loss='mean_squared_error', optimizer='adam')\n",
+    "model.fit(x_train, y_train, epochs=1, batch_size=1, verbose=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x_test, y_test = [], []\n",
+    "for i in range(0, 60):\n",
+    "    x_test.append(scaled_data[])"
+   ]
   }
  ],
  "metadata": {
