Prepared training and testing data. Trained model. Next step is to predict values.

--- a/etaal.ipynb
+++ b/etaal.ipynb
@@ -465,13 +465,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(60, 1)\n"
+     ]
+    }
+   ],
    "source": [
-    "x_test, y_test = [], []\n",
-    "for i in range(0, 60):\n",
-    "    x_test.append(scaled_data[])"
+    "x_test = scaled_data[len(scaled_data) - len(test) - 60: len(scaled_data) - len(test)]\n",
+    "y_test = scaled_data[len(scaled_data) - len(test):]\n",
+    "\n",
+    "result = []\n",
+    "# print(x_test[0:60].shape)\n",
+    "for i in range(0, len(test)):\n",
+    "    y = model.predict(x_test[i:i+60])\n",
+    "    x_test.append(y)\n",
+    "    result.append(y)\n",
+    "    \n",
+    "# Calculate rms of result and y test after doing inverse transform\n",
+    "# Plot\n",
+    "    "
    ]
   }
  ],
