predicted value far from correct.

--- a/etaal.ipynb
+++ b/etaal.ipynb
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,16 +222,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fb18ca5c160>]"
+       "[<matplotlib.lines.Line2D at 0x7f23446e7e10>]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -305,16 +305,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fb18b855ba8>]"
+       "[<matplotlib.lines.Line2D at 0x7f23446e7240>]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -339,17 +339,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.preprocessing import MinMaxScaler\n",
     "from keras.models import Sequential\n",
@@ -358,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +365,7 @@
        "       [6.01139958e-04]])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -438,16 +430,16 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/1\n",
-      " - 94s - loss: 0.0047\n"
+      " - 88s - loss: 0.0049\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x7fb188e87358>"
+       "<keras.callbacks.History at 0x7f23289a1940>"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,32 +457,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(60, 1)\n"
+      "[[[1.07908303e-01]\n",
+      "  [1.16037187e-01]\n",
+      "  [3.25547957e-02]\n",
+      "  [2.30984962e-02]\n",
+      "  [1.52051605e-02]\n",
+      "  [1.00255423e-02]\n",
+      "  [9.42440236e-03]\n",
+      "  [1.16253107e-02]\n",
+      "  [1.32152645e-02]\n",
+      "  [1.03773932e-01]\n",
+      "  [9.31742398e-02]\n",
+      "  [6.89446191e-02]\n",
+      "  [2.15355323e-02]\n",
+      "  [4.51198477e-02]\n",
+      "  [2.81480718e-02]\n",
+      "  [2.04313977e-02]\n",
+      "  [1.75778231e-02]\n",
+      "  [1.61277263e-02]\n",
+      "  [1.02684519e-02]\n",
+      "  [4.30367137e-03]\n",
+      "  [1.00770686e-02]\n",
+      "  [1.02488229e-02]\n",
+      "  [9.75073548e-03]\n",
+      "  [4.57357094e-03]\n",
+      "  [3.67554146e-03]\n",
+      "  [3.45716816e-03]\n",
+      "  [1.92855513e-03]\n",
+      "  [4.13927799e-03]\n",
+      "  [3.66327329e-03]\n",
+      "  [3.09157693e-03]\n",
+      "  [2.76524381e-03]\n",
+      "  [2.81186282e-03]\n",
+      "  [2.47571517e-03]\n",
+      "  [8.48956838e-04]\n",
+      "  [2.50270513e-03]\n",
+      "  [2.89528633e-03]\n",
+      "  [3.67063419e-03]\n",
+      "  [5.38817693e-03]\n",
+      "  [1.46727222e-03]\n",
+      "  [1.44273590e-03]\n",
+      "  [9.93721154e-04]\n",
+      "  [9.02936753e-04]\n",
+      "  [3.16518590e-04]\n",
+      "  [2.25734188e-04]\n",
+      "  [1.00598932e-04]\n",
+      "  [1.66847009e-04]\n",
+      "  [9.07844018e-05]\n",
+      "  [3.43508547e-04]\n",
+      "  [1.59486111e-04]\n",
+      "  [1.76661539e-04]\n",
+      "  [2.62538675e-04]\n",
+      "  [1.39857051e-04]\n",
+      "  [2.45363248e-04]\n",
+      "  [2.52724145e-04]\n",
+      "  [1.17774359e-04]\n",
+      "  [6.94377992e-04]\n",
+      "  [1.27588889e-03]\n",
+      "  [1.51143761e-03]\n",
+      "  [1.57277842e-03]\n",
+      "  [2.35548718e-03]]]\n",
+      "[[-0.00266579]]\n",
+      "[[-1085.4655]]\n"
      ]
     }
    ],
    "source": [
+    "# x_test = []\n",
+    "# for i in range(0, 60):\n",
+    "#     x_test.append(scaled_data[len(scaled_data) - len(test) - 60 + i])\n",
+    "# x_test = np.array(x_test)\n",
     "x_test = scaled_data[len(scaled_data) - len(test) - 60: len(scaled_data) - len(test)]\n",
+    "# print(x_test)\n",
     "y_test = scaled_data[len(scaled_data) - len(test):]\n",
+    "x_test = np.reshape(x_test, (1, x_test.shape[0], x_test.shape[1]))\n",
+    "# x_test = x_test.reshape(-1, 1)\n",
+    "print(x_test)\n",
     "\n",
     "result = []\n",
-    "# print(x_test[0:60].shape)\n",
-    "for i in range(0, len(test)):\n",
-    "    y = model.predict(x_test[i:i+60])\n",
-    "    x_test.append(y)\n",
-    "    result.append(y)\n",
-    "    \n",
+    "# for i in range(0, len(test)):\n",
+    "y = model.predict(x_test)\n",
+    "print(y)\n",
+    "y = scaler.inverse_transform(y)\n",
+    "print(y)\n",
+    "#     x_test.append(y)\n",
+    "#     result.append(y)\n",
+    "\n",
+    "# results = scaler.inverse_transform(results)\n",
+    "# y_test = scaler.inverse_transform(y_test)\n",
     "# Calculate rms of result and y test after doing inverse transform\n",
     "# Plot\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
