--- a/etaal.ipynb
+++ b/etaal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
        "4       62205                0.62205  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
        "4 2013-01-09      1"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 33,
    "metadata": {
     "scrolled": true
    },
@@ -230,10 +230,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f5bd7816710>]"
+       "[<matplotlib.lines.Line2D at 0x7f836f8eeef0>]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -288,8 +288,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
+   "execution_count": 35,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -355,7 +357,7 @@
        "4  2013-01-09 00:00:00     1"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,25 +391,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "  Count  Year  Month  Week  Day  Dayofweek  Dayofyear\n",
+      "0     4  2013      1     1    1          1          1\n",
+      "1     2  2013      1     1    3          3          3\n",
+      "2     6  2013      1     1    4          4          4\n",
+      "3     1  2013      1     2    7          0          7\n",
+      "4     1  2013      1     2    9          2          9\n",
       "1742\n"
      ]
     }
    ],
    "source": [
+    "print(new_data.head())\n",
     "train_size = int(0.90 * len(new_data))\n",
     "print(train_size)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +449,7 @@
        "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -490,11 +499,11 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f5bd7fabac8>,\n",
-       " <matplotlib.lines.Line2D at 0x7f5bd7fab630>]"
+       "[<matplotlib.lines.Line2D at 0x7f8370026ba8>,\n",
+       " <matplotlib.lines.Line2D at 0x7f8370026cc0>]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     },
