--- a/Linear Regression.ipynb
+++ b/Linear Regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
        "4       62205                0.62205  "
       ]
      },
-     "execution_count": 219,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
        "4 2013-01-05   7272"
       ]
      },
-     "execution_count": 234,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,16 +222,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fb50f517b00>]"
+       "[<matplotlib.lines.Line2D at 0x7f105feab438>]"
       ]
      },
-     "execution_count": 236,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -251,7 +251,7 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "plt.figure(figsize=(16, 8))\n",
-    "plt.plot(education_data)"
+    "plt.plot(education_data)\n"
    ]
   },
   {
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
@@ -332,7 +332,7 @@
        "4  2013-01-05 00:00:00  7272"
       ]
      },
-     "execution_count": 237,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -437,7 +437,7 @@
        "4  7272  2013      1    5"
       ]
      },
-     "execution_count": 239,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +497,7 @@
        "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
       ]
      },
-     "execution_count": 246,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,7 +591,7 @@
    ],
    "source": [
     "from datetime import datetime, timedelta\n",
-    "\n",
+    "print()\n",
     "test = pd.date_range('2018-05-14', '2019-05-14', freq='D')\n",
     "test = pd.DataFrame(test, columns=['Date'])\n",
     "test_date = pd.date_range('2018-05-14', '2019-05-14', freq='D')\n",
